# XSalsa20

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  bench_xsalsa.c  test_xsalsa.c  xsalsa.c  xsalsa.h  xsalsa20.pc.in  xsalsa_avx.c  xsalsa_avx.h  xsalsa_avx2.c  xsalsa_avx2.h  xsalsa_avx512.c  xsalsa_avx512.h  xsalsa_cpu.c  xsalsa_impl_check.c  xsalsa_impl_check.h  xsalsa_runtime.c  xsalsa_scalar.c  xsalsa_scalar.h
.cache/clangd/index/: bench_xsalsa.c.3E99675EC8FCC1D1.idx  test_xsalsa.c.CC05FBC2A85E83A7.idx  xsalsa.c.ECC8F8F3386F7B39.idx  xsalsa.h.012DA5C7130C5161.idx  xsalsa_avx.c.92774D0EFC3C7D3E.idx  xsalsa_avx.h.BAE5F39ABFE4FEC9.idx  xsalsa_cpu.c.BE69F027AB7FCE35.idx  xsalsa_runtime.c.2EB6996D594BFCA2.idx  xsalsa_scalar.c.3078724261D86132.idx  xsalsa_scalar.h.B315BD51951F5775.idx
.github/workflows/: ci.yml  easy-test.yml
cmake/: XSalsa20Config.cmake.in
